tests/fail/src/tester.c
/**
 * SECTION:tester
 * @short_description: module for gtk-doc unit test
 */

#include <glib.h>

#include "tester.h"


